feature-be/world-view: Resolved Sonarqube code quality issues, current all issues on code-quality resolved.